# perfofalg

./: .clang-format  CMakeLists.txt  common.h  data_generator.cpp  data_generator.h  main.cpp  sort_algs.cpp  sort_algs.h  timer.h
